--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,4 @@ jobs:
         run:  npm run format:check
 
       - name: run lint check
-        run:  npm run lint:check
+        run:  npm run lint
