--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,4 +35,7 @@ jobs:
         run: 'gcloud info'
 
       - name: 'Build and push Docker image'
-        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457507/notely-ar-repo/latest .'
+        run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457507/notely-ar-repo/latest:latest .'
+
+      - name: 'Deploy to Cloud Run'
+        run: 'gcloud run deploy notely --image central1-docker.pkg.dev/notely-45750/notely-ar-repo/latest:latest --region REGION --allow-unauthenticated --project notely-457507 --max-instances=4'
