--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,4 +38,4 @@ jobs:
         run: 'gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457507/notely-ar-repo/latest:latest .'
 
       - name: 'Deploy to Cloud Run'
-        run: 'gcloud run deploy notely --image central1-docker.pkg.dev/notely-45750/notely-ar-repo/latest:latest --region REGION --allow-unauthenticated --project notely-457507 --max-instances=4'
+        run: 'gcloud run deploy notely --image central1-docker.pkg.dev/notely-45750/notely-ar-repo/latest:latest --region us-central1 --allow-unauthenticated --project notely-457507 --max-instances=4'
