--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Apply migrations
+        run: npm run db:migrate
+
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
         with:
@@ -39,3 +42,5 @@ jobs:
 
       - name: 'Deploy to Cloud Run'
         run: 'gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-457507/notely-ar-repo/latest:latest --region us-central1 --allow-unauthenticated --project notely-457507 --max-instances=4'
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
